[package]
authors = ["Tanner Leland <tanner@imaginarygarage.com>"]
edition = "2021"
readme = "README.md"
name = "fluid"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = { version = "0.5.0", features = ["jlink-quirks"] }
stm32f0xx-hal = { version = "0.18", features = ["stm32f051"] }
panic-halt = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "fluid"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
